portage-converter: Update layers specs

--- a/portage-converter/layers/macaroni-funtoo-race6.yaml
+++ b/portage-converter/layers/macaroni-funtoo-race6.yaml
@@ -501,6 +501,7 @@ packages:
   - x11-libs/libXv:0
   - x11-libs/libXvMC:0
   - x11-libs/libXxf86vm:0
+  - x11-libs/libXtst
   - x11-libs/libdrm:0
   - x11-libs/libfontenc:0
   - x11-libs/libpciaccess:0
