seed/funtoo-kit-geaaru: Bump v.0.20231005+1

--- a/packages/seeds/funtoo-kit-geaaru/definition.yaml
+++ b/packages/seeds/funtoo-kit-geaaru/definition.yaml
@@ -1,7 +1,7 @@
 name: funtoo-kit-geaaru
-version: "0.20231005"
+version: 0.20231005+1
 category: seed
 labels:
   repo: https://github.com/geaaru/geaaru_overlay.git
   repo_branch: funtoo
-  repo_hash: 7b4f96f329650e16e6f9d5634c91e0248a120c6c
+  repo_hash: afd9dbea7880c20ca5c9942a4accdbc9584d90a5
