--- a/packages/atoms/base/sys-libs/zlib/definition.yaml
+++ b/packages/atoms/base/sys-libs/zlib/definition.yaml
@@ -1,5 +1,5 @@
 name: zlib
-version: 1.2.13
+version: "1.3"
 category: sys-libs
 use_flags:
 - minizip
@@ -24,4 +24,4 @@ labels:
   kit: core-kit
   original.package.name: sys-libs/zlib
   original.package.slot: "0"
-  original.package.version: 1.2.13
+  original.package.version: "1.3"
