net-vpn/networkmanager-strongswan: Bump v.1.6.0+1

--- a/packages/atoms/desktop/net-vpn/networkmanager-strongswan/definition.yaml
+++ b/packages/atoms/desktop/net-vpn/networkmanager-strongswan/definition.yaml
@@ -1,8 +1,8 @@
 name: networkmanager-strongswan
-version: 1.6.0
+version: 1.6.0+1
 category: net-vpn
 use_flags:
-- gtk4
+- -gtk4
 requires:
 - name: libsecret
   version: '>=0'
@@ -13,6 +13,9 @@ requires:
 - name: strongswan
   version: '>=0'
   category: net-vpn
+- name: gtk+
+  version: '>=0'
+  category: x11-libs-3
 annotations:
   subsets:
     rules:
