--- a/packages/atoms/base-text2/dev-libs/redland/build.yaml
+++ b/packages/atoms/base-text2/dev-libs/redland/build.yaml
@@ -1,4 +1,6 @@
 prelude:
+- >-
+  cp redland-1.0.17-r2.ebuild /var/git/meta-repo/kits/dev-kit/dev-libs/redland/
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
