toolchain/emulation: Update rdeps

--- a/packages/toolchain/emulation/definition.yaml
+++ b/packages/toolchain/emulation/definition.yaml
@@ -21,7 +21,13 @@ requires:
   - name: firecracker-bin
     category: app-emulation
     version: '>=0'
+  - name: libcacard
+    category: app-emulation
+    version: '>=0'
   - name: lxc
+    category: app-emulation
+    version: '>=0'
+  - name: lxc-templates
     category: app-emulation
     version: '>=0'
   - name: lxd
