--- a/packages/toolchain/gnome-extra/definition.yaml
+++ b/packages/toolchain/gnome-extra/definition.yaml
@@ -174,6 +174,9 @@ requires:
   - name: gtksourceview
     category: x11-libs-3.0
     version: '>=0'
+  - name: funtoo-gnome-shell-theme
+    category: x11-themes
+    version: '>=0'
   - name: gkrellm-themes
     category: x11-themes
     version: '>=0'
