--- a/packages/toolchain/base-qt2/definition.yaml
+++ b/packages/toolchain/base-qt2/definition.yaml
@@ -33,6 +33,9 @@ requires:
   - name: linguist
     category: dev-qt-5
     version: '>=0'
+  - name: qdbus
+    category: dev-qt-5
+    version: '>=0'
   - name: qtmultimedia
     category: dev-qt-5
     version: '>=0'
