toolchain/python-extra: Update rdeps

--- a/packages/toolchain/python-extra/definition.yaml
+++ b/packages/toolchain/python-extra/definition.yaml
@@ -12,6 +12,9 @@ requires:
   - name: wxpython
     category: dev-python-4.0
     version: '>=0'
+  - name: PyQtWebEngine
+    category: dev-python
+    version: '>=0'
   - name: aiodns
     category: dev-python
     version: '>=0'
@@ -76,6 +79,9 @@ requires:
     category: dev-python
     version: '>=0'
   - name: cppy
+    category: dev-python
+    version: '>=0'
+  - name: cssutils
     category: dev-python
     version: '>=0'
   - name: curio
@@ -271,6 +277,9 @@ requires:
     category: dev-python
     version: '>=0'
   - name: pynacl
+    category: dev-python
+    version: '>=0'
+  - name: pypeg2
     category: dev-python
     version: '>=0'
   - name: pyserial
