toolchain/tools: Update rdeps

--- a/packages/toolchain/tools/definition.yaml
+++ b/packages/toolchain/tools/definition.yaml
@@ -150,6 +150,9 @@ requires:
   - name: olsrd
     category: net-misc
     version: '>=0'
+  - name: sshpass
+    category: net-misc
+    version: '>=0'
   - name: stunnel
     category: net-misc
     version: '>=0'
@@ -190,6 +193,9 @@ requires:
     category: sys-apps
     version: '>=0'
   - name: usbredir
+    category: sys-apps
+    version: '>=0'
+  - name: xinetd
     category: sys-apps
     version: '>=0'
   - name: nss-mdns
