portage-converter/tools: Add sshpass

--- a/portage-converter/tools.yaml
+++ b/portage-converter/tools.yaml
@@ -409,6 +409,7 @@ artefacts:
     - sys-power/acpi
     - sys-power/pm-quirks
     - net-libs/libgssglue
+    - net-misc/sshpass
 
 - tree: packages/atoms/tools
   uses:
