seed/macaroni-funtoo-stage: Bump v.0.20231007+1

--- a/packages/seeds/macaroni-funtoo-stage/definition.yaml
+++ b/packages/seeds/macaroni-funtoo-stage/definition.yaml
@@ -1,6 +1,6 @@
 name: macaroni-funtoo-stage
-version: "0.20231007"
+version: 0.20231007+1
 category: seed
 hidden: true
 labels:
-  luet_version: 0.35.1
+  luet_version: 0.39.2
