gnome-base-2.0/libglade: Bump v.2.6.4+1

--- a/packages/atoms/desktop/gnome-base-2.0/libglade/definition.yaml
+++ b/packages/atoms/desktop/gnome-base-2.0/libglade/definition.yaml
@@ -1,11 +1,11 @@
 name: libglade
-version: 2.6.4
+version: 2.6.4+1
 category: gnome-base-2.0
 use_flags:
 - -python_single_target_python2_7
 - -test
+- -tools
 - prefix
-- tools
 requires:
 - name: glib
   version: '>=0'
