seed/funtoo-kit-geaaru: Bump v.0.20231007

--- a/packages/seeds/funtoo-kit-geaaru/definition.yaml
+++ b/packages/seeds/funtoo-kit-geaaru/definition.yaml
@@ -1,7 +1,7 @@
 name: funtoo-kit-geaaru
-version: 0.20231005+1
+version: "0.20231007"
 category: seed
 labels:
   repo: https://github.com/geaaru/geaaru_overlay.git
   repo_branch: funtoo
-  repo_hash: afd9dbea7880c20ca5c9942a4accdbc9584d90a5
+  repo_hash: d493f4640770b1fb642568c27576e880d6c7ad78
