--- a/packages/atoms/desktop/media-video/kino/definition.yaml
+++ b/packages/atoms/desktop/media-video/kino/definition.yaml
@@ -1,5 +1,5 @@
 name: kino
-version: 1.3.4
+version: 1.3.4+1
 category: media-video
 use_flags:
 - -gpac
@@ -26,6 +26,9 @@ requires:
 - name: libsamplerate
   version: '>=0'
   category: media-libs
+- name: rawrec
+  version: '>=0'
+  category: media-sound
 - name: sox
   version: '>=0'
   category: media-sound
