--- a/packages/atoms/desktop/media-video/kino/build.yaml
+++ b/packages/atoms/desktop/media-video/kino/build.yaml
@@ -1,4 +1,6 @@
 prelude:
+- >-
+  luet repo update && luet upgrade && luet cleanup
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
