dev-python/mwparserfromhell: Bump v.0.6.5

--- a/packages/atoms/base-python/dev-python/mwparserfromhell/definition.yaml
+++ b/packages/atoms/base-python/dev-python/mwparserfromhell/definition.yaml
@@ -1,5 +1,5 @@
 name: mwparserfromhell
-version: 0.6.4+1
+version: 0.6.5
 category: dev-python
 use_flags:
 - -python_targets_python2_7
@@ -38,4 +38,4 @@ labels:
   kit: python-modules-kit
   original.package.name: dev-python/mwparserfromhell
   original.package.slot: "0"
-  original.package.version: 0.6.4
+  original.package.version: 0.6.5
