--- a/packages/atoms/base-python/dev-python/gpep517/definition.yaml
+++ b/packages/atoms/base-python/dev-python/gpep517/definition.yaml
@@ -1,5 +1,5 @@
 name: gpep517
-version: 13+1
+version: "15"
 category: dev-python
 use_flags:
 - -python_targets_python3_10
@@ -38,4 +38,4 @@ labels:
   kit: python-modules-kit
   original.package.name: dev-python/gpep517
   original.package.slot: "0"
-  original.package.version: "13"
+  original.package.version: "15"
