media-video/kino: Bump v.1.3.4+2

--- a/packages/atoms/desktop/media-video/kino/definition.yaml
+++ b/packages/atoms/desktop/media-video/kino/definition.yaml
@@ -1,5 +1,5 @@
 name: kino
-version: 1.3.4+1
+version: 1.3.4+2
 category: media-video
 use_flags:
 - -gpac
@@ -35,6 +35,9 @@ requires:
 - name: vorbis-tools
   version: '>=0'
   category: media-sound
+- name: dvdauthor
+  version: '>=0'
+  category: media-video
 - name: mjpegtools
   version: '>=0'
   category: media-video-1
