dev-python/wheel: Add description

--- a/packages/atoms/base-python/dev-python/wheel/definition.yaml
+++ b/packages/atoms/base-python/dev-python/wheel/definition.yaml
@@ -25,6 +25,7 @@ annotations:
       - ^/usr/include/
       portage:
       - ^/var/db/pkg/
+description: reference implementation of the Python wheel packaging standard, as defined in PEP 427
 uri:
 - https://pypi.org/project/wheel/
 license: MIT
