dev-python/tomli: Add description

--- a/packages/atoms/base-python/dev-python/tomli/definition.yaml
+++ b/packages/atoms/base-python/dev-python/tomli/definition.yaml
@@ -20,6 +20,7 @@ annotations:
       - ^/usr/include/
       portage:
       - ^/var/db/pkg/
+description: A lil' TOML parser
 uri:
 - https://pypi.org/project/tomli/
 license: MIT
