--- a/packages/atoms/base-python/dev-python/sphinxcontrib-serializinghtml/definition.yaml
+++ b/packages/atoms/base-python/dev-python/sphinxcontrib-serializinghtml/definition.yaml
@@ -2,18 +2,14 @@ name: sphinxcontrib-serializinghtml
 version: 1.1.9
 category: dev-python
 use_flags:
-- -python_targets_pypy3
 - -python_targets_python3_10
 - -python_targets_python3_7
 - -python_targets_python3_8
 - python_targets_python3_9
 requires:
-- name: python
+- name: namespace-sphinxcontrib
   version: '>=0'
-  category: dev-lang-3.9
-- name: python-exec
-  version: '>=0'
-  category: dev-lang-2
+  category: dev-python
 annotations:
   subsets:
     rules:
@@ -21,17 +17,17 @@ annotations:
       - ^/usr/include/
       portage:
       - ^/var/db/pkg/
-description: Sphinx extension which outputs outputs serialized HTML files
+description: sphinxcontrib-serializinghtml is a sphinx extension which outputs serialized
+  HTML files (json and pickle)
 uri:
-- http://www.sphinx-doc.org
-license: BSD-2
+- https://pypi.org/project/sphinxcontrib-serializinghtml/
+license: BSD
 labels:
   BDEPEND: python_targets_python3_7? ( dev-lang/python:3.7 ) python_targets_python3_9?
     ( dev-lang/python:3.9 ) python_targets_python3_8? ( dev-lang/python:3.8 ) python_targets_python3_10?
     ( dev-lang/python:3.10 ) >=dev-lang/python-exec-2:=[python_targets_python3_7(-)?,python_targets_python3_9(-)?,python_targets_python3_8(-)?,python_targets_python3_10(-)?,-python_single_target_python3_7(-),-python_single_target_python3_9(-),-python_single_target_python3_8(-),-python_single_target_python3_10(-)]
     >=dev-python/gpep517-6[python_targets_python3_7(-)?,python_targets_python3_9(-)?,python_targets_python3_8(-)?,python_targets_python3_10(-)?,-python_single_target_python3_7(-),-python_single_target_python3_9(-),-python_single_target_python3_8(-),-python_single_target_python3_10(-)]
     >=dev-python/flit_core-3.7.1[python_targets_python3_7(-)?,python_targets_python3_9(-)?,python_targets_python3_8(-)?,python_targets_python3_10(-)?,-python_single_target_python3_7(-),-python_single_target_python3_9(-),-python_single_target_python3_8(-),-python_single_target_python3_10(-)]
-  DEPEND: dev-python/setuptools[python_targets_pypy3(-)?,python_targets_python3_7(-)?,python_targets_python3_9(-)?,python_targets_python3_8(-)?,python_targets_python3_10(-)?,-python_single_target_pypy3(-),-python_single_target_python3_7(-),-python_single_target_python3_9(-),-python_single_target_python3_8(-),-python_single_target_python3_10(-)]
   IUSE: python_targets_python3_7 python_targets_python3_9 python_targets_python3_8
     python_targets_python3_10
   RDEPEND: dev-python/namespace-sphinxcontrib[python_targets_python3_7(-)?,python_targets_python3_9(-)?,python_targets_python3_8(-)?,python_targets_python3_10(-)?,-python_single_target_python3_7(-),-python_single_target_python3_9(-),-python_single_target_python3_8(-),-python_single_target_python3_10(-)]
