media-video/dvdauthor: Bump v.0.7.2+1

--- a/packages/atoms/desktop/media-video/dvdauthor/build.yaml
+++ b/packages/atoms/desktop/media-video/dvdauthor/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: graphicsmagick
+- name: macaroni-funtoo-race17
   version: '>=0'
-  category: media-gfx
+  category: seed
