--- a/packages/atoms/desktop/media-video/dvdauthor/definition.yaml
+++ b/packages/atoms/desktop/media-video/dvdauthor/definition.yaml
@@ -1,19 +1,19 @@
 name: dvdauthor
-version: 0.7.2
+version: 0.7.2+1
 category: media-video
 use_flags:
-- graphicsmagick
+- -graphicsmagick
 - imagemagick
 requires:
 - name: fribidi
   version: '>=0'
   category: dev-libs
-- name: graphicsmagick
-  version: '>=0'
-  category: media-gfx
 - name: imagemagick
   version: '>=0'
   category: media-gfx
+- name: freetype
+  version: '>=0'
+  category: media-libs-2
 - name: libdvdread
   version: '>=0'
   category: media-libs
