--- a/packages/atoms/base-python/dev-python/sphinx_rtd_theme/definition.yaml
+++ b/packages/atoms/base-python/dev-python/sphinx_rtd_theme/definition.yaml
@@ -2,18 +2,17 @@ name: sphinx_rtd_theme
 version: 1.3.0
 category: dev-python
 use_flags:
-- -python_targets_pypy3
 - -python_targets_python3_10
 - -python_targets_python3_7
 - -python_targets_python3_8
 - python_targets_python3_9
 requires:
-- name: python
+- name: sphinx
   version: '>=0'
-  category: dev-lang-3.9
-- name: python-exec
+  category: dev-python
+- name: sphinxcontrib-jquery
   version: '>=0'
-  category: dev-lang-2
+  category: dev-python
 annotations:
   subsets:
     rules:
@@ -21,16 +20,15 @@ annotations:
       - ^/usr/include/
       portage:
       - ^/var/db/pkg/
-description: ReadTheDocs.org theme for Sphinx
+description: Read the Docs theme for Sphinx
 uri:
-- https://github.com/snide/sphinx_rtd_theme/
+- https://github.com/readthedocs/sphinx_rtd_theme https://pypi.org/project/sphinx-rtd-theme/
 license: MIT
 labels:
   BDEPEND: python_targets_python3_7? ( dev-lang/python:3.7 ) python_targets_python3_9?
     ( dev-lang/python:3.9 ) python_targets_python3_8? ( dev-lang/python:3.8 ) python_targets_python3_10?
     ( dev-lang/python:3.10 ) >=dev-lang/python-exec-2:=[python_targets_python3_7(-)?,python_targets_python3_9(-)?,python_targets_python3_8(-)?,python_targets_python3_10(-)?,-python_single_target_python3_7(-),-python_single_target_python3_9(-),-python_single_target_python3_8(-),-python_single_target_python3_10(-)]
     >=dev-python/setuptools-42.0.2[python_targets_python3_7(-)?,python_targets_python3_9(-)?,python_targets_python3_8(-)?,python_targets_python3_10(-)?,-python_single_target_python3_7(-),-python_single_target_python3_9(-),-python_single_target_python3_8(-),-python_single_target_python3_10(-)]
-  DEPEND: dev-python/setuptools[python_targets_pypy3(-)?,python_targets_python3_7(-)?,python_targets_python3_9(-)?,python_targets_python3_8(-)?,python_targets_python3_10(-)?,-python_single_target_pypy3(-),-python_single_target_python3_7(-),-python_single_target_python3_9(-),-python_single_target_python3_8(-),-python_single_target_python3_10(-)]
   IUSE: python_targets_python3_7 python_targets_python3_9 python_targets_python3_8
     python_targets_python3_10
   RDEPEND: dev-python/sphinxcontrib-jquery[python_targets_python3_7(-)?,python_targets_python3_9(-)?,python_targets_python3_8(-)?,python_targets_python3_10(-)?,-python_single_target_python3_7(-),-python_single_target_python3_9(-),-python_single_target_python3_8(-),-python_single_target_python3_10(-)]
