dev-python/sphinx: Add description

--- a/packages/atoms/base-python/dev-python/sphinx/definition.yaml
+++ b/packages/atoms/base-python/dev-python/sphinx/definition.yaml
@@ -66,6 +66,7 @@ annotations:
       - ^/usr/include/
       portage:
       - ^/var/db/pkg/
+description: Python documentation generator
 uri:
 - https://pypi.org/project/Sphinx/
 license: BSD
