--- a/packages/atoms/base-python/dev-python/setuptools-rust/definition.yaml
+++ b/packages/atoms/base-python/dev-python/setuptools-rust/definition.yaml
@@ -26,8 +26,9 @@ annotations:
       - ^/usr/include/
       portage:
       - ^/var/db/pkg/
+description: Setuptools Rust extension plugin
 uri:
-- https://github.com/PyO3/setuptools-rust https://pypi.org/project/setuptools-rust/
+- https://pypi.org/project/setuptools-rust/
 license: MIT
 labels:
   BDEPEND: python_targets_python3_7? ( dev-lang/python:3.7 ) python_targets_python3_9?
