dev-python/semantic_version: Update runtime specs

--- a/packages/atoms/base-python/dev-python/semantic_version/definition.yaml
+++ b/packages/atoms/base-python/dev-python/semantic_version/definition.yaml
@@ -20,8 +20,9 @@ annotations:
       - ^/usr/include/
       portage:
       - ^/var/db/pkg/
+description: Python library providing a few tools handling SemVer in Python
 uri:
-- https://github.com/rbarrois/python-semanticversion https://pypi.org/project/semantic-version/
+- https://pypi.org/project/semantic_version/
 license: BSD
 labels:
   BDEPEND: python_targets_python3_7? ( dev-lang/python:3.7 ) python_targets_python3_9?
