dev-python/pytz: Add description

--- a/packages/atoms/base-python/dev-python/pytz/definition.yaml
+++ b/packages/atoms/base-python/dev-python/pytz/definition.yaml
@@ -21,6 +21,7 @@ annotations:
       - ^/usr/include/
       portage:
       - ^/var/db/pkg/
+description: World timezone definitions, modern and historical
 uri:
 - http://pythonhosted.org/pytz https://pypi.org/project/pytz/
 license: MIT
