dev-python/pyparsing: Add description

--- a/packages/atoms/base-python/dev-python/pyparsing/definition.yaml
+++ b/packages/atoms/base-python/dev-python/pyparsing/definition.yaml
@@ -21,6 +21,8 @@ annotations:
       - ^/usr/include/
       portage:
       - ^/var/db/pkg/
+description: pyparsing module - Classes and methods to define and execute parsing
+  grammars
 uri:
 - https://pypi.org/project/pyparsing/
 license: MIT
