dev-python/mwparserfromhell: Add description

--- a/packages/atoms/base-python/dev-python/mwparserfromhell/definition.yaml
+++ b/packages/atoms/base-python/dev-python/mwparserfromhell/definition.yaml
@@ -21,6 +21,7 @@ annotations:
       - ^/usr/include/
       portage:
       - ^/var/db/pkg/
+description: MWParserFromHell is a parser for MediaWiki wikicode.
 uri:
 - https://github.com/earwig/mwparserfromhell https://pypi.org/project/mwparserfromhell/
 license: MIT
