dev-python/markupsafe: Update runtime specs

--- a/packages/atoms/base-python/dev-python/markupsafe/definition.yaml
+++ b/packages/atoms/base-python/dev-python/markupsafe/definition.yaml
@@ -21,8 +21,9 @@ annotations:
       - ^/usr/include/
       portage:
       - ^/var/db/pkg/
+description: Implements a XML/HTML/XHTML Markup safe string for Python
 uri:
-- https://palletsprojects.com/p/markupsafe/ https://pypi.org/project/MarkupSafe/
+- https://pypi.org/project/MarkupSafe
 license: BSD
 labels:
   BDEPEND: python_targets_python3_7? ( dev-lang/python:3.7 ) python_targets_python3_9?
