dev-python/jinja: Add description

--- a/packages/atoms/base-python/dev-python/jinja/definition.yaml
+++ b/packages/atoms/base-python/dev-python/jinja/definition.yaml
@@ -22,6 +22,7 @@ annotations:
       - ^/usr/include/
       portage:
       - ^/var/db/pkg/
+description: A full-featured template engine for Python
 uri:
 - https://palletsprojects.com/p/jinja/ https://pypi.org/project/Jinja2/
 license: BSD
