--- a/packages/atoms/base-python/dev-python/idna/definition.yaml
+++ b/packages/atoms/base-python/dev-python/idna/definition.yaml
@@ -21,8 +21,9 @@ annotations:
       - ^/usr/include/
       portage:
       - ^/var/db/pkg/
+description: Internationalized Domain Names in Applications (IDNA)
 uri:
-- https://pypi.org/project/idna/
+- None https://pypi.org/project/idna/
 license: BSD
 labels:
   BDEPEND: python_targets_python3_7? ( dev-lang/python:3.7 ) python_targets_python3_9?
