dev-python/gpep517: Add description

--- a/packages/atoms/base-python/dev-python/gpep517/definition.yaml
+++ b/packages/atoms/base-python/dev-python/gpep517/definition.yaml
@@ -20,6 +20,7 @@ annotations:
       - ^/usr/include/
       portage:
       - ^/var/db/pkg/
+description: Python package builder and installer for non-pip-centric world
 uri:
 - https://pypi.org/project/gpep517/
 license: MIT
