dev-python/flit_core: Add description

--- a/packages/atoms/base-python/dev-python/flit_core/definition.yaml
+++ b/packages/atoms/base-python/dev-python/flit_core/definition.yaml
@@ -20,6 +20,7 @@ annotations:
       - ^/usr/include/
       portage:
       - ^/var/db/pkg/
+description: Simplified packaging of Python modules (core module)
 uri:
 - https://pypi.org/project/flit-core/
 license: BSD
