--- a/packages/atoms/base-python/dev-python/docutils/definition.yaml
+++ b/packages/atoms/base-python/dev-python/docutils/definition.yaml
@@ -18,6 +18,7 @@ annotations:
       - ^/usr/include/
       portage:
       - ^/var/db/pkg/
+description: Docutils -- Python Documentation Utilities
 uri:
 - https://docutils.sourceforge.io/ https://pypi.org/project/docutils/
 license: BSD
