dev-python/cryptography: Add description

--- a/packages/atoms/base-python/dev-python/cryptography/definition.yaml
+++ b/packages/atoms/base-python/dev-python/cryptography/definition.yaml
@@ -31,8 +31,9 @@ annotations:
       - ^/usr/include/
       portage:
       - ^/var/db/pkg/
+description: Library providing cryptographic recipes and primitives
 uri:
-- https://github.com/pyca/cryptography https://pypi.org/project/cryptography/
+- https://pypi.org/project/cryptography/
 license: '|| ( Apache-2.0 BSD )'
 labels:
   BDEPEND: python_targets_python3_7? ( dev-lang/python:3.7 ) python_targets_python3_9?
