dev-python/commonmark: Add description

--- a/packages/atoms/base-python/dev-python/commonmark/definition.yaml
+++ b/packages/atoms/base-python/dev-python/commonmark/definition.yaml
@@ -22,6 +22,7 @@ annotations:
       - ^/usr/include/
       portage:
       - ^/var/db/pkg/
+description: Python parser for the CommonMark Markdown spec
 uri:
 - https://github.com/rtfd/commonmark.py https://pypi.org/project/commonmark/
 license: BSD
