--- a/packages/atoms/base-python/dev-python/charset_normalizer/definition.yaml
+++ b/packages/atoms/base-python/dev-python/charset_normalizer/definition.yaml
@@ -20,8 +20,9 @@ annotations:
       - ^/usr/include/
       portage:
       - ^/var/db/pkg/
+description: The Real First Universal Charset Detector
 uri:
-- https://github.com/Ousret/charset_normalizer https://pypi.org/project/charset-normalizer/
+- https://github.com/ousret/charset_normalizer
 license: MIT
 labels:
   BDEPEND: python_targets_python3_7? ( dev-lang/python:3.7 ) python_targets_python3_9?
