dev-python/chardet: Add descriptin

--- a/packages/atoms/base-python/dev-python/chardet/definition.yaml
+++ b/packages/atoms/base-python/dev-python/chardet/definition.yaml
@@ -21,6 +21,7 @@ annotations:
       - ^/usr/include/
       portage:
       - ^/var/db/pkg/
+description: Universal encoding detector for Python 3
 uri:
 - https://github.com/chardet/chardet https://pypi.org/project/chardet/
 labels:
