dev-python/Babel: Add decription

--- a/packages/atoms/base-python/dev-python/Babel/definition.yaml
+++ b/packages/atoms/base-python/dev-python/Babel/definition.yaml
@@ -18,6 +18,7 @@ annotations:
       - ^/usr/include/
       portage:
       - ^/var/db/pkg/
+description: Internationalization utilities
 uri:
 - https://babel.pocoo.org/ https://pypi.org/project/Babel/
 license: BSD
