dev-libs-1/libusb: Update description

--- a/packages/atoms/base-python/dev-libs-1/libusb/definition.yaml
+++ b/packages/atoms/base-python/dev-libs-1/libusb/definition.yaml
@@ -11,7 +11,7 @@ annotations:
       - ^/usr/include/
       portage:
       - ^/var/db/pkg/
-description: Userspace access to USB devices
+description: A cross-platform library to access USB devices
 uri:
 - https://libusb.info/ https://github.com/libusb/libusb
 license: LGPL-2.1
