--- a/packages/atoms/base-python/dev-lang-stable/rust-bin/build.yaml
+++ b/packages/atoms/base-python/dev-lang-stable/rust-bin/build.yaml
@@ -28,6 +28,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: semantic_version
+- name: packaging
   version: '>=0'
   category: dev-python
