--- a/packages/atoms/base-python/dev-python/flit_core/build.yaml
+++ b/packages/atoms/base-python/dev-python/flit_core/build.yaml
@@ -28,6 +28,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: rust-bin
+- name: setuptools_scm
   version: '>=0'
-  category: dev-lang-stable
+  category: dev-python
