--- a/packages/atoms/base-python/dev-python/six/build.yaml
+++ b/packages/atoms/base-python/dev-python/six/build.yaml
@@ -28,6 +28,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: cryptography
+- name: macaroni-funtoo-race1
   version: '>=0'
-  category: dev-python
+  category: seed
