--- a/packages/atoms/base-python/dev-python/tomli/build.yaml
+++ b/packages/atoms/base-python/dev-python/tomli/build.yaml
@@ -28,6 +28,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: eselect-rust
+- name: installer
   version: '>=0'
-  category: app-eselect
+  category: dev-python
