--- a/packages/atoms/desktop/media-video/dvdauthor/build.yaml
+++ b/packages/atoms/desktop/media-video/dvdauthor/build.yaml
@@ -1,4 +1,9 @@
 prelude:
+# Termporary
+- >-
+  luet repo update &&
+  luet upgrade &&
+  luet cleanup
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
