atoms/base-python: Review build order

--- a/packages/atoms/base-python/dev-python/setuptools-rust/build.yaml
+++ b/packages/atoms/base-python/dev-python/setuptools-rust/build.yaml
@@ -28,6 +28,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: libffi
+- name: setuptools_scm
   version: '>=0'
-  category: virtual
+  category: dev-python
