media-sound/rawrec: Bump v.0.9.991+2

--- a/packages/atoms/desktop/media-sound/rawrec/build.yaml
+++ b/packages/atoms/desktop/media-sound/rawrec/build.yaml
@@ -3,7 +3,8 @@ prelude:
 - >-
   luet repo update &&
   luet upgrade &&
-  luet cleanup
+  luet cleanup &&
+  sed -i '/fperms/d' /var/git/extra-kits/geaaru-kit/media-sound/rawrec/rawrec-0.9.991.ebuild
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
