--- a/packages/atoms/e17/dev-libs/efl/build.yaml
+++ b/packages/atoms/e17/dev-libs/efl/build.yaml
@@ -1,4 +1,6 @@
 prelude:
+- >-
+  cp efl-1.26.3.ebuild /var/git/meta-repo/kits/dev-kit/dev-libs/efl/
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
