toolchain/base-python: Update rdeps

--- a/packages/toolchain/base-python/definition.yaml
+++ b/packages/toolchain/base-python/definition.yaml
@@ -78,6 +78,9 @@ requires:
   - name: mwparserfromhell
     category: dev-python
     version: '>=0'
+  - name: namespace-sphinxcontrib
+    category: dev-python
+    version: '>=0'
   - name: packaging
     category: dev-python
     version: '>=0'
@@ -130,6 +133,9 @@ requires:
     category: dev-python
     version: '>=0'
   - name: sphinxcontrib-htmlhelp
+    category: dev-python
+    version: '>=0'
+  - name: sphinxcontrib-jquery
     category: dev-python
     version: '>=0'
   - name: sphinxcontrib-jsmath
