toolchain/base-tools: Update rdeps

--- a/packages/toolchain/base-tools/definition.yaml
+++ b/packages/toolchain/base-tools/definition.yaml
@@ -132,7 +132,7 @@ requires:
   - name: libintl-perl
     category: dev-perl
     version: '>=0'
-  - name: boost-build
+  - name: b2
     category: dev-util
     version: '>=0'
   - name: cmake
