--- a/packages/atoms/e17/media-gfx/ephoto/definition.yaml
+++ b/packages/atoms/e17/media-gfx/ephoto/definition.yaml
@@ -1,8 +1,8 @@
 name: ephoto
-version: 1.6.0
+version: 1.6.0+1
 category: media-gfx
 use_flags:
-- nls
+- -nls
 requires:
 - name: efl
   version: '>=0'
