portage-converter/base-tools.yml: Add dev-util/b2

--- a/portage-converter/base-tools.yml
+++ b/portage-converter/base-tools.yml
@@ -347,6 +347,7 @@ artefacts:
     - sh
   packages:
   - app-text/docbook-xsl-stylesheets
+  - dev-util/b2
 
 - tree: packages/atoms/base-tools
   uses:
