media-gfx/ephoto: Bump v.1.6.0+2

--- a/packages/atoms/e17/media-gfx/ephoto/build.yaml
+++ b/packages/atoms/e17/media-gfx/ephoto/build.yaml
@@ -1,4 +1,6 @@
 prelude:
+- >-
+  cp ephoto-1.6.0.ebuild /var/git/meta-repo/kits/media-kit/media-gfx/ephoto/
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
