toolchain/desktop: Update rdeps

--- a/packages/toolchain/desktop/definition.yaml
+++ b/packages/toolchain/desktop/definition.yaml
@@ -36,6 +36,9 @@ requires:
   - name: lockfile
     category: dev-python
     version: '>=0'
+  - name: libglade
+    category: gnome-base-2.0
+    version: '>=0'
   - name: thunderbird-bin
     category: mail-client
     version: '>=0'
@@ -59,6 +62,21 @@ requires:
     version: '>=0'
   - name: xsane
     category: media-gfx
+    version: '>=0'
+  - name: rawrec
+    category: media-sound
+    version: '>=0'
+  - name: sox
+    category: media-sound
+    version: '>=0'
+  - name: vorbis-tools
+    category: media-sound
+    version: '>=0'
+  - name: dvdauthor
+    category: media-video
+    version: '>=0'
+  - name: kino
+    category: media-video
     version: '>=0'
   - name: obs-studio
     category: media-video
@@ -85,6 +103,9 @@ requires:
     category: net-libs
     version: '>=0'
   - name: postman-bin
+    category: net-misc
+    version: '>=0'
+  - name: youtube-dl
     category: net-misc
     version: '>=0'
   - name: networkmanager-openconnect
