portage-converter/e17.yaml: Update specs

--- a/portage-converter/e17.yaml
+++ b/portage-converter/e17.yaml
@@ -151,8 +151,9 @@ artefacts:
     disabled:
       - connman
       - doc
+      - xwayland
   packages:
-    - x11-wm/enlightenment
+    - x11-wm/enlightenment:0.17
 
 include_layers:
 - layers/macaroni-funtoo-race17.yaml
