dev-libs/efl: Bump v.1.26.3+3

--- a/packages/atoms/e17/dev-libs/efl/definition.yaml
+++ b/packages/atoms/e17/dev-libs/efl/definition.yaml
@@ -1,11 +1,10 @@
 name: efl
-version: 1.26.3+2
+version: 1.26.3+3
 category: dev-libs
 use_flags:
 - -avif
 - -connman
 - -doc
-- -drm
 - -fribidi
 - -gles2-only
 - -gnutls
@@ -19,6 +18,7 @@ use_flags:
 - -unwind
 - -vnc
 - -xpresent
+- drm
 - X
 - elogind
 - fontconfig
