app-crypt/mit-krb5: Update runtime specs

--- a/packages/atoms-extra/net/app-crypt/mit-krb5/definition.yaml
+++ b/packages/atoms-extra/net/app-crypt/mit-krb5/definition.yaml
@@ -5,7 +5,6 @@ use_flags:
 - -amd64
 - -cpu_flags_x86_aes
 - -doc
-- -libressl
 - -lmdb
 - -openldap
 - -selinux
@@ -25,9 +24,9 @@ requires:
 - name: gettext
   version: '>=0'
   category: sys-devel
-- name: e2fsprogs-libs
+- name: e2fsprogs
   version: '>=0'
-  category: sys-libs
+  category: sys-fs
 - name: libverto
   version: '>=0'
   category: dev-libs
