app-text/asciidoc: Add description

--- a/packages/atoms-extra/net/app-text/asciidoc/definition.yaml
+++ b/packages/atoms-extra/net/app-text/asciidoc/definition.yaml
@@ -29,6 +29,7 @@ annotations:
       - ^/usr/include/
       portage:
       - ^/var/db/pkg/
+description: AsciiDoc is a text document format for writing things.
 uri:
 - https://github.com/asciidoc/asciidoc-py3 https://pypi.org/project/asciidoc/
 labels:
