--- a/packages/atoms-extra/net/dev-libs/libdnet/definition.yaml
+++ b/packages/atoms-extra/net/dev-libs/libdnet/definition.yaml
@@ -17,6 +17,9 @@ requires:
 - name: check
   version: '>=0'
   category: dev-libs
+- name: libbsd
+  version: '>=0'
+  category: dev-libs
 annotations:
   subsets:
     rules:
