atoms-extra/net: Update build order

--- a/packages/atoms-extra/net/dev-libs/geoip/build.yaml
+++ b/packages/atoms-extra/net/dev-libs/geoip/build.yaml
@@ -28,6 +28,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: asciidoc
+- name: macaroni-funtoo-race4
   version: '>=0'
-  category: app-text
+  category: seed
