--- a/packages/atoms-extra/net/dev-libs/jansson/build.yaml
+++ b/packages/atoms-extra/net/dev-libs/jansson/build.yaml
@@ -28,6 +28,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: XML-LibXML
+- name: XML-SAX
   version: '>=0'
   category: dev-perl
