--- a/packages/atoms-extra/net/dev-libs/libgamin/build.yaml
+++ b/packages/atoms-extra/net/dev-libs/libgamin/build.yaml
@@ -28,6 +28,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: memcached
+- name: libev
   version: '>=0'
-  category: net-misc
+  category: dev-libs
