--- a/packages/atoms-extra/net/dev-libs/libmemcached/build.yaml
+++ b/packages/atoms-extra/net/dev-libs/libmemcached/build.yaml
@@ -33,6 +33,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: rrdtool
+- name: memcached
   version: '>=0'
-  category: net-analyzer
+  category: net-misc
