--- a/packages/atoms-extra/net/app-text/docbook2X/build.yaml
+++ b/packages/atoms-extra/net/app-text/docbook2X/build.yaml
@@ -28,6 +28,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: libnftnl
+- name: XML-LibXML
   version: '>=0'
-  category: net-libs
+  category: dev-perl
