--- a/packages/atoms-extra/net/dev-libs/libev/build.yaml
+++ b/packages/atoms-extra/net/dev-libs/libev/build.yaml
@@ -28,6 +28,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: geoip
+- name: macaroni-funtoo-race4
   version: '>=0'
-  category: dev-libs
+  category: seed
