--- a/packages/atoms-extra/net/www-servers/lighttpd/build.yaml
+++ b/packages/atoms-extra/net/www-servers/lighttpd/build.yaml
@@ -28,6 +28,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: libmemcached
+- name: rrdtool
   version: '>=0'
-  category: dev-libs
+  category: net-analyzer
