net-firewall/nftables: Bump v.1.0.8+1

--- a/packages/atoms-extra/net/net-firewall/nftables/build.yaml
+++ b/packages/atoms-extra/net/net-firewall/nftables/build.yaml
@@ -28,6 +28,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: docbook2X
+- name: libnftnl
   version: '>=0'
-  category: app-text
+  category: net-libs
