portage-converter/net-extra.yaml: Update specs

--- a/portage-converter/net-extra.yaml
+++ b/portage-converter/net-extra.yaml
@@ -482,6 +482,7 @@ artefacts:
       - json
       - modern_kernel
       - readline
+      - cli
     disabled:
       - debug
       - doc
@@ -603,8 +604,6 @@ artefacts:
     - nginx_modules_http_dav
     - nginx_modules_http_degradation
     - nginx_modules_http_flv
-    - nginx_modules_http_geoip
-    - nginx_modules_http_gunzip
     - nginx_modules_http_gzip_static
     - nginx_modules_http_image_filter
     - nginx_modules_http_mp4
@@ -640,7 +639,9 @@ artefacts:
     - nginx_modules_http_empty_gif
     - nginx_modules_http_fastcgi
     - nginx_modules_http_geo
+    - nginx_modules_http_geoip
     - nginx_modules_http_grpc
+    - nginx_modules_http_gunzip
     - nginx_modules_http_gzip
     - nginx_modules_http_limit_conn
     - nginx_modules_http_limit_req
