app-emulation/libvirt: Bump v.9.6.0+1

--- a/packages/atoms/emulation2/app-emulation/libvirt/definition.yaml
+++ b/packages/atoms/emulation2/app-emulation/libvirt/definition.yaml
@@ -1,5 +1,5 @@
 name: libvirt
-version: 9.6.0
+version: 9.6.0+1
 category: app-emulation
 use_flags:
 - -apparmor
@@ -29,6 +29,7 @@ use_flags:
 - virt-network
 - virtualbox
 - zfs
+- lxc
 requires:
 - name: qemu
   version: '>=0'
