virtual-1.8/jdk: Update bdeps

--- a/packages/atoms/java/virtual-1.8/jdk/build.yaml
+++ b/packages/atoms/java/virtual-1.8/jdk/build.yaml
@@ -29,6 +29,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: openjdk-bin
+- name: oracle-jdk-bin
   version: '>=0'
-  category: dev-java-8
+  category: dev-java-1.8
